# fr24api-sdk-python

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yaml
examples/: basic_usage.py
src/fr24sdk/: __init__.py  client.py  exceptions.py  transport.py
src/fr24sdk/models/: __init__.py  airline.py  airport.py  flight.py  flight_category.py  geographic.py  regex_patterns.py  usage.py
src/fr24sdk/resources/: __init__.py  airlines.py  airports.py  flight_summary.py  flight_tracks.py  usage.py
src/fr24sdk/resources/historic/: events.py  positions.py
src/fr24sdk/resources/live/: positions.py
tests/unit/: test_flight_summary.py  test_historic_positions.py  test_live_positions.py  test_transport.py
