[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fr24sdk"
version = "0.1.0"
description = "Python SDK for the Flightradar24 API"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["flightradar24", "FR24", "api", "sdk", "aviation"]
authors = [
  { name = "Damian Szumski", email = "damian.szumski@fr24.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "httpx>=0.26,<0.28", # Pinned to a minor version for stability, allowing patch updates.
  "exceptiongroup; python_version < '3.11'",
  "tenacity>=8.2,<9.0" # Added tenacity for retry logic
]

[project.urls]
Homepage = "https://github.com/flightradar24/fr24api-sdk"
Documentation = "https://github.com/flightradar24/fr24api-sdk/blob/main/docs/README.md"
Repository = "https://github.com/flightradar24/fr24api-sdk"
Changelog = "https://github.com/flightradar24/fr24api-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "httpx[http2,brotli]", # For testing advanced httpx features if needed
  "respx", # For mocking httpx requests
  "tenacity", # Also add to dev for testing if not already covered by main deps
  "pre-commit",
  "bandit",
  "safety",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pip-tools", # For managing requirements.txt from pyproject.toml if desired later
]

[tool.hatch.version]
path = "src/fr24sdk/__init__.py"

[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = [
    "S101",  # Allow assert
    "ANN101", # Allow missing type annotation for `self` in method
    "ANN102", # Allow missing type annotation for `cls` in classmethod
    "D203",   # 1 blank line required before class docstring (conflict with black/blue)
    "D213",   # Multi-line docstring summary should start at the second line (conflict with black/blue)
    "FIX002", # Line contains TODO
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link or ticket in TODO
    "COM812", # Conflict with ruff formatter
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Start with this and reduce as stubs become available or are created
disallow_untyped_defs = true
disallow_any_generics = false # Becomes too verbose quickly, can enable later for specific modules
check_untyped_defs = true
strict_optional = true # Enable this early

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true # Often tests are less strict

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src/fr24sdk --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
python_files = "test_*.py"

[tool.coverage.run]
source = ["src/fr24sdk"]

[tool.coverage.report]
fail_under = 80 # Start with a reasonable target

[tool.bandit]
skips = ["B101"] # Allow assert in tests 